--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2796,7 +2796,7 @@ kbd {
   }
   
   .ak-height-45 {
-    height: 30px !important;
+    height: 15px !important;
   }
   
   /* 히어로 섹션에서 문의하기, A/S접수 버튼 숨김 */
@@ -2831,8 +2831,13 @@ kbd {
   }
   
   .ak-header_btns .heartbeat-icon img {
-    width: 18px !important;
-    height: 18px !important;
+    width: 14px !important;
+    height: 14px !important;
+  }
+  
+  .ak-header_btns .heartbeat-icon {
+    width: 20px !important;
+    height: 20px !important;
   }
   
   .ak-header_btns .language-selector {
